--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.6.4",
     "lib-flexible": "^0.3.2",
     "node-sass": "^4.14.0",
+    "quill": "^1.3.7",
     "sass-loader": "^8.0.2",
+    "three": "^0.127.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
